--- a/src/app/pages/start/start.html
+++ b/src/app/pages/start/start.html
@@ -1,5 +1,18 @@
-<main class="view-start">
-    <app-header></app-header>
+<app-header></app-header>
 
-    Start View
+<main class="page-start container">
+    <p>Short introduction</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque commodi cumque dignissimos doloribus ducimus explicabo illo illum impedit incidunt, iste itaque iusto labore laborum mollitia nobis odio perspiciatis provident voluptatem!</p>
+
+    <a class="btn btn-primary btn-lg btn-block" ui-sref="overview">
+        Continue without login
+    </a>
+
+    <a class="btn btn-secondary btn-lg btn-block" href="#0">
+        Log In
+    </a>
+
+    <a class="btn btn-secondary btn-lg btn-block" href="#0">
+        Sign Up
+    </a>
 </main>
