--- a/src/app/pages/signUp/signUp.html
+++ b/src/app/pages/signUp/signUp.html
@@ -1,5 +1,57 @@
 <app-header></app-header>
 
 <main class="page-signUp container">
-    D:
+    <div class="alert alert-danger" role="alert" ng-if="signUp.errorMessage">
+        {{ signUp.errorMessage }}
+    </div>
+
+    <form name="signUp.form" ng-submit="signUp.form.$valid && signUp.submit(signUp.user)" novalidate>
+        <div class="form-group" ng-class="{'has-danger': (signUp.form.$submitted || signUp.form.email.$touched) && signUp.form.email.$invalid}">
+            <label class="form-control-label" for="signUp-email">Email</label>
+            <input class="form-control" type="email" id="signUp-email" name="email" ng-model="signUp.user.email" required ng-change="signUp.resetEmailValidation()">
+
+            <div class="text-help" ng-show="(signUp.form.$submitted || signUp.form.email.$touched) && signUp.form.email.$invalid">
+                <div ng-show="signUp.form.email.$error.required || signUp.form.email.$error.email">
+                    Please enter a valid email address.
+                </div>
+                <div ng-show="signUp.form.email.$error.unique">
+                    An account with this email-address already exists.
+                </div>
+            </div>
+        </div>
+
+        <div class="form-group" ng-class="{'has-danger': (signUp.form.$submitted || signUp.form.password.$touched) && signUp.form.password.$invalid}">
+            <label class="form-control-label" for="signUp-password">Password</label>
+            <input type="password" class="form-control" id="signUp-password" name="password" ng-model="signUp.user.password" minlength="10" required>
+
+            <div class="text-help" ng-show="(signUp.form.$submitted || signUp.form.password.$touched) && signUp.form.password.$invalid">
+                <div ng-show="signUp.form.password.$error.required">
+                    Please enter a password.
+                </div>
+                <div ng-show="signUp.form.password.$error.minlength">
+                    Please use a password with at least 10 characters.
+                </div>
+            </div>
+        </div>
+
+        <div class="form-group" ng-class="{'has-danger': (signUp.form.$submitted || signUp.form.passwordRepeat.$touched) && signUp.form.passwordRepeat.$invalid}">
+            <label class="form-control-label" for="signUp-password-repeat">Repeat Password</label>
+            <input type="password" class="form-control" id="signUp-password-repeat" name="passwordRepeat" ng-model="passwordRepeat" match="signUp.user.password" required>
+
+            <div class="text-help" ng-show="(signUp.form.$submitted || signUp.form.passwordRepeat.$touched) && signUp.form.passwordRepeat.$invalid">
+                <div ng-show="signUp.form.passwordRepeat.$error.required">
+                    Please repeat the password.
+                </div>
+                <div ng-show="!signUp.form.passwordRepeat.$error.required && signUp.form.passwordRepeat.$error.match">
+                    The passwords you entered don't match.
+                </div>
+            </div>
+        </div>
+
+        <button class="btn btn-primary btn-lg btn-block" type="submit">Sign Up</button>
+    </form>
+
+    <p class="signIn-hint">
+        <a ui-sref="signIn">Already have an account?</a>
+    </p>
 </main>
