--- a/src/app/pages/start/start.html
+++ b/src/app/pages/start/start.html
@@ -12,7 +12,7 @@
         Log In
     </a>
 
-    <a class="btn btn-secondary btn-lg btn-block" href="#0">
+    <a class="btn btn-secondary btn-lg btn-block" ui-sref="signUp">
         Sign Up
     </a>
 </main>
