--- a/src/app/pages/start/start.html
+++ b/src/app/pages/start/start.html
@@ -8,8 +8,8 @@
         Continue without login
     </a>
 
-    <a class="btn btn-secondary btn-lg btn-block" href="#0">
-        Log In
+    <a class="btn btn-secondary btn-lg btn-block" ui-sref="signIn">
+        Sign In
     </a>
 
     <a class="btn btn-secondary btn-lg btn-block" ui-sref="signUp">
