--- a/src/app/pages/start/start.html
+++ b/src/app/pages/start/start.html
@@ -1,18 +1,23 @@
 <app-header></app-header>
 
 <main class="page-start container">
-    <p>Short introduction</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque commodi cumque dignissimos doloribus ducimus explicabo illo illum impedit incidunt, iste itaque iusto labore laborum mollitia nobis odio perspiciatis provident voluptatem!</p>
+  <p>Welcome to Coins!</p>
+  <p>You can continue without account or sign up and sync expenses between all your devices.</p>
 
-    <a class="btn btn-primary btn-lg btn-block" ui-sref="overview">
-        Continue without login
-    </a>
+  <a class="btn btn-primary btn-lg btn-block" ui-sref="overview">
+    Start tracking expenses
+  </a>
 
-    <a class="btn btn-secondary btn-lg btn-block" ui-sref="signIn">
-        Sign In
-    </a>
+  <p class="text-xs-center text-or">
+    - or -
+  </p>
 
-    <a class="btn btn-secondary btn-lg btn-block" ui-sref="signUp">
-        Sign Up
-    </a>
+  <a class="btn btn-secondary btn-lg btn-block" ui-sref="signUp">
+    Sign Up
+  </a>
+
+
+  <p class="signIn-hint">
+    <a ui-sref="signIn">Already have a account?</a>
+  </p>
 </main>
