--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-static-top navbar-dark bg-primary">
-  <a class="navbar-brand" ui-sref="start">Expenses</a>
+  <a class="navbar-brand" ui-sref="start">Coins</a>
 
   <ul class="nav navbar-nav">
     <li class="nav-item" ui-sref-active="active">
