Added icons & web manifest

--- a/src/tpl-index.ejs
+++ b/src/tpl-index.ejs
@@ -5,6 +5,15 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Coins</title>
+  <meta name="description" content="Coins is a Webapp that allows you to track your expenses and access them across your digital devices.">
+
+  <link rel="apple-touch-icon" href="<%= require('./assets/images/icons/apple-touch-icon.png') %>" sizes="180x180">
+  <link rel="icon" type="image/png" href="<%= require('./assets/images/icons/favicon-32x32.png') %>" sizes="32x32">
+  <link rel="icon" type="image/png" href="<%= require('./assets/images/icons/favicon-16x16.png') %>" sizes="16x16">
+  <meta name="apple-mobile-web-app-title" content="Coins">
+  <meta name="application-name" content="Coins">
+  <meta name="theme-color" content="#FFEB3B">
+  <link rel="manifest" href="<%= require('./webmanifest.json') %>">
 
   <style>
     .loading {
@@ -26,14 +35,6 @@
       font-size: 32px;
     }
   </style>
-
-  {% for (var css in o.htmlWebpackPlugin.files.css) { %}
-  <link href="{%=o.htmlWebpackPlugin.files.css[css] %}" rel="stylesheet">
-  {% } %}
-
-  {% for (var chunk in o.htmlWebpackPlugin.files.chunks) { %}
-  <script src="{%=o.htmlWebpackPlugin.files.chunks[chunk].entry %}" defer></script>
-  {% } %}
 </head>
 <body ui-view>
   <div class="loading">
