Changed theme color

--- a/src/tpl-index.ejs
+++ b/src/tpl-index.ejs
@@ -12,7 +12,7 @@
   <link rel="icon" type="image/png" href="<%= require('./assets/images/icons/favicon-16x16.png') %>" sizes="16x16">
   <meta name="apple-mobile-web-app-title" content="Coins">
   <meta name="application-name" content="Coins">
-  <meta name="theme-color" content="#FFEB3B">
+  <meta name="theme-color" content="#0275D8">
   <link rel="manifest" href="<%= require('./webmanifest.json') %>">
 
   <style>
