--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -1,15 +1,17 @@
-<nav class="navbar navbar-static-top navbar-dark bg-primary">
-  <a class="navbar-brand" ui-sref="start">Coins</a>
+<header class="component-header">
+  <nav class="navbar navbar-static-top navbar-dark bg-primary">
+    <a class="navbar-brand" ui-sref="start">Coins</a>
 
-  <ul class="nav navbar-nav">
-    <li class="nav-item" ui-sref-active="active">
-      <a class="nav-link" ui-sref="overview">Overview</a>
-    </li>
-    <li class="nav-item" ui-sref-active="active">
-      <a class="nav-link" ui-sref="addExpense">Add</a>
-    </li>
-    <li class="nav-item" ui-sref-active="active">
-      <a class="nav-link" ui-sref="tags">Tags</a>
-    </li>
-  </ul>
-</nav>
+    <ul class="nav navbar-nav">
+      <li class="nav-item" ui-sref-active="active">
+        <a class="nav-link" ui-sref="overview">Overview</a>
+      </li>
+      <li class="nav-item" ui-sref-active="active">
+        <a class="nav-link" ui-sref="addExpense">Add</a>
+      </li>
+      <li class="nav-item" ui-sref-active="active">
+        <a class="nav-link" ui-sref="tags">Tags</a>
+      </li>
+    </ul>
+  </nav>
+</header>
