--- a/src/app/pages/overview/overview.scss
+++ b/src/app/pages/overview/overview.scss
@@ -13,6 +13,16 @@
     }
   }
 
+  .table-subheadline {
+    margin-top: 2rem;
+    font-size: 1.3rem;
+
+    @media (max-width: 767px) {
+      font-size: 1rem;
+      padding: 0 0.75rem;
+    }
+  }
+
   .table {
     margin-top: 1rem;
 
