Dependecy updates & refactoring

--- a/src/app/pages/sign-in/sign-in.html
+++ b/src/app/pages/sign-in/sign-in.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 
-<main class="page-signIn container">
+<main class="page-sign-in container">
     <div class="alert alert-danger" role="alert" ng-if="signIn.errorMessage">
         {{ signIn.errorMessage }}
     </div>
