--- a/src/app/pages/sign-up/sign-up.html
+++ b/src/app/pages/sign-up/sign-up.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 
-<main class="page-signUp container">
+<main class="page-sign-up container">
     <div class="alert alert-danger" role="alert" ng-if="signUp.errorMessage">
         {{ signUp.errorMessage }}
     </div>
