--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -1,17 +1,78 @@
 <header class="component-header">
   <nav class="navbar navbar-static-top navbar-dark bg-primary">
-    <a class="navbar-brand" ui-sref="start">Coins</a>
+    <a
+      class="navbar-brand"
+      ui-sref="start"
+    >
+      Coins
+    </a>
 
     <ul class="nav navbar-nav">
-      <li class="nav-item" ui-sref-active="active">
-        <a class="nav-link" ui-sref="overview">Overview</a>
+      <li
+        class="nav-item"
+        ui-sref-active="active"
+      >
+        <a
+          class="nav-link"
+          ui-sref="overview"
+        >
+          Overview
+        </a>
       </li>
-      <li class="nav-item" ui-sref-active="active">
-        <a class="nav-link" ui-sref="addExpense">Add</a>
+
+      <li
+        class="nav-item"
+        ui-sref-active="active"
+      >
+        <a
+          class="nav-link"
+          ui-sref="addExpense"
+        >
+          Add
+        </a>
       </li>
-      <li class="nav-item" ui-sref-active="active">
-        <a class="nav-link" ui-sref="tags">Tags</a>
+
+      <li
+        class="nav-item hidden-xs-down"
+        ui-sref-active="active"
+      >
+        <a
+          class="nav-link"
+          ui-sref="tags"
+        >
+          Manage Tags
+        </a>
       </li>
     </ul>
+
+    <button
+      class="navbar-toggler float-xs-right hidden-sm-up"
+      type="button"
+      aria-controls="header-collapsing-navbar-controls"
+      aria-expanded="{{ headerCtrl.isMenuExpanded ? 'true' : 'false' }}"
+      aria-label="Toggle navigation"
+      ng-click="headerCtrl.toggleMenu()"
+    ></button>
+
+    <div
+      id="header-collapsing-navbar-controls"
+      aria-expanded="{{ headerCtrl.isMenuExpanded ? 'true' : 'false' }}"
+      class="navbar-toggleable-xs collapse hidden-sm-up"
+      ng-class="{ in: headerCtrl.isMenuExpanded }"
+    >
+      <ul class="nav navbar-nav">
+        <li
+          class="nav-item"
+          ui-sref-active="active"
+        >
+          <a
+            class="nav-link"
+            ui-sref="tags"
+          >
+            Manage Tags
+          </a>
+        </li>
+      </ul>
+    </div>
   </nav>
 </header>
