--- a/src/app/components/header/header.scss
+++ b/src/app/components/header/header.scss
@@ -6,4 +6,8 @@
     @include make-container();
     @include make-container-max-widths();
   }
+
+  .navbar-toggleable-xs {
+    clear: right;
+  }
 }
