--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -43,6 +43,18 @@
           Manage Tags
         </a>
       </li>
+
+      <li
+        class="nav-item hidden-xs-down"
+        ui-sref-active="active"
+      >
+        <a
+          class="nav-link"
+          ui-sref="exportImport"
+        >
+          Data export / import
+        </a>
+      </li>
     </ul>
 
     <button
@@ -70,6 +82,18 @@
             ui-sref="tags"
           >
             Manage Tags
+          </a>
+        </li>
+
+        <li
+          class="nav-item"
+          ui-sref-active="active"
+        >
+          <a
+            class="nav-link"
+            ui-sref="exportImport"
+          >
+            Data export / import
           </a>
         </li>
       </ul>
