WIP JSON import

--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -40,7 +40,7 @@
           class="nav-link"
           ui-sref="tags"
         >
-          Manage Tags
+          Tags
         </a>
       </li>
 
@@ -52,7 +52,7 @@
           class="nav-link"
           ui-sref="exportImport"
         >
-          Data export / import
+          Data
         </a>
       </li>
     </ul>
@@ -81,7 +81,7 @@
             class="nav-link"
             ui-sref="tags"
           >
-            Manage Tags
+            Tags
           </a>
         </li>
 
@@ -93,7 +93,7 @@
             class="nav-link"
             ui-sref="exportImport"
           >
-            Data export / import
+            Data
           </a>
         </li>
       </ul>
