--- a/src/app/pages/export-import/export-import.scss
+++ b/src/app/pages/export-import/export-import.scss
@@ -1,6 +1,10 @@
 .page-export-import {
   .title-import,
   .title-erase {
-    margin-top: 1rem;
+    margin-top: 2rem;
+  }
+
+  .import-json-input {
+    display: none;
   }
 }
