Renamed page exportImport to data

--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -50,7 +50,7 @@
       >
         <a
           class="nav-link"
-          ui-sref="exportImport"
+          ui-sref="data"
         >
           Data
         </a>
@@ -91,7 +91,7 @@
         >
           <a
             class="nav-link"
-            ui-sref="exportImport"
+            ui-sref="data"
           >
             Data
           </a>
