--- a/src/app/components/views/overview/overview.scss
+++ b/src/app/components/views/overview/overview.scss
@@ -1,5 +1,5 @@
-@import "../../../../node_modules/bootstrap/scss/variables";
-@import "../../../../node_modules/bootstrap/scss/mixins";
+@import "../../../../../node_modules/bootstrap/scss/variables";
+@import "../../../../../node_modules/bootstrap/scss/mixins";
 
 .page-overview {
   .current {
