Improved data controller

--- a/src/app/components/views/data/data.html
+++ b/src/app/components/views/data/data.html
@@ -21,7 +21,7 @@
     type="file"
     id="data-import-json-input"
     class="import-json-input"
-    link-element="dataCtrl.importJsonInput"
+    link-element="dataCtrl.importJsonInputReady($element)"
   >
 
   <label
