Updated Hoodie to current version, migrated data and account services

--- a/src/app/components/views/expense/expense.html
+++ b/src/app/components/views/expense/expense.html
@@ -118,8 +118,8 @@
     >
       <button
         type="button"
-        class="btn btn-outline-danger btn-sm"
-        ng-click="$ctrl.remove(expense.expense)"
+        class="btn btn-danger-outline btn-sm"
+        ng-click="$ctrl.remove($ctrl.expense)"
       >
         Remove expense
       </button>
