Fix data import / export feature

--- a/src/app/components/views/data/data.html
+++ b/src/app/components/views/data/data.html
@@ -28,8 +28,7 @@
     class="btn btn-primary btn-xl btn-block"
     for="data-import-json-input"
   >
-    Import
-    <small>JSON / CSV</small>
+    Import JSON
   </label>
 
   <h2 class="title-erase">Erase data</h2>
