--- a/src/app/components/views/expense/expense.html
+++ b/src/app/components/views/expense/expense.html
@@ -97,7 +97,7 @@
         Date
       </label>
       <input
-        class="form-control"
+        class="form-control date-input"
         id="expense-date"
         ng-model="$ctrl.expense.date"
         name="date"
