Add simple stats and tag colors to overview

--- a/src/app/components/header/header.scss
+++ b/src/app/components/header/header.scss
@@ -9,6 +9,10 @@
     @include make-container-max-widths();
   }
 
+  .navbar {
+    border-radius: 0;
+  }
+
   .navbar-toggleable-xs {
     clear: right;
   }
