--- a/src/app/components/views/overview/overview.html
+++ b/src/app/components/views/overview/overview.html
@@ -1,6 +1,8 @@
 <app-header></app-header>
 
 <div class="page-overview">
+  <overview-stats></overview-stats>
+
   <div class="container">
     <div class="row">
       <div class="col-xs-3">
@@ -44,7 +46,10 @@
     <table class="table table-striped">
       <tbody>
       <tr ng-repeat="expense in expenses">
-        <td class="col-date">
+        <td
+          class="col-date"
+          ng-style="{ borderLeftColor: expense.tagData.color }"
+        >
           <a ui-sref="editExpense({id: expense.id})">
             {{ expense.date | date: 'yyyy-MM-dd' }}
           </a>
