--- a/src/app/components/views/tags/tags.scss
+++ b/src/app/components/views/tags/tags.scss
@@ -1,5 +1,9 @@
 .page-tags {
-    .tags-list .remove-col {
-        vertical-align: middle;
-    }
+  .tags-list .remove-col {
+      vertical-align: middle;
+  }
+
+  .col-name {
+    border-left: .5rem solid;
+  }
 }
